# heartfeed

./: .env.example  .gitignore  LICENSE  PATH_MANIFEST.md  README.md  docker-compose.yml  pyproject.toml
config/: categories.yaml  prompts.yaml  prompts_brt14.yaml  retrieval.yaml  retrieval_thresholds.yaml  story_examples.yaml
config/tracks/: brt14.yaml
data/: catalog-index.json
data/chunks/: 10_Alpha_Male_Body_Language_Tricks_EVERY_Guy_Should_Do_TODAY.json  10_Behaviors_that_Destroy_Relationships.json  10_Body_Language_Signs_Your_Crush_Likes_You.json  10_Body_Language_Tricks_You_Need_To_Know.json  10_Great_Questions_to_Ask_on_a_Date___Dating_Advice_for_Women_by_Mat_Boggs.json  (+474 more)
docs/: rag-okf-final-design.md  rag-system-design.md
scripts/: audit_claims.py  bench_latency.py  fix_timestamps.py  generate_test_questions.py  index_book_insights.py  index_chunks.py  index_classic_delta.py  index_target_corpus.py  reindex_classics_force.py  repair_qdrant.py  restore_payload.py  run_qa.py  run_qa_100.py  run_qa_batch.py  run_qa_bg.py  run_qa_full.py  start.sh
tests/: __init__.py  run_user_query.py  test_answer_quality.py  test_chat_v2.py  test_chunker.py  test_citation_schema.py  test_claim_retriever.py  test_embeddings_qdrant.py  test_evaluation.py  test_evidence_gate.py  test_generation.py  test_intake_planner.py  test_knowledge.py  test_nous_client.py  test_query_router.py  test_redaction.py  test_rescue_core.py  test_retrieval.py  test_safety_router.py  test_saju_adapter.py  test_story_examples.py  test_target_corpus.py  test_v2_integration.py  test_v2_schemas.py
(+424 files in other folders)
